# airdrop-analytics-cli

./: README.md  pyproject.toml
airdrop_analytics/: gitattributes  main.py
